# test-commander

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  TODO.md  bootstrap.sh  docker-compose.yml  pyproject.toml
.claude-plugin/: marketplace.json
docs/: agent-adapters.md  architecture.md  chat-command-governance.md  command-reference.md  controlled-agent-execution.md  glossary.md  install.md  methodology.md  roadmap.md  runtime-approval-flow.md  security-and-permissions.md  skill-evaluation.md  vision.md  workspace-reference.md
docs/user-guide/: automation.md  building-project-knowledge.md  customizing-for-your-project.md  exploring-an-app.md  generating-bdd.md  getting-started.md  reviewing-requirements.md  workflow.md
implementation/: phase5.md  phase6.md
planning/: plan.md
plugins/test-commander/: LICENSE  README.md
plugins/test-commander/.claude-plugin/: plugin.json
plugins/test-commander/scripts/: automate.py  automation_plan.py  build_framework.py  create_charter.py  enrich_test_ideas.py  explore.py  extract_knowledge_from_api.py  extract_knowledge_from_code.py  extract_knowledge_from_docs.py  extract_knowledge_from_specs.py  extract_knowledge_from_tests.py  generate_bdd.py  generate_test_data.py  (+15 more)
scripts/: check_links.py  verify_skills.py
templates/workspace/: config.yaml
tests/: test_automate.py  test_automation_plan.py  test_build_framework.py  test_create_charter.py  test_enrich_test_ideas.py  test_explore.py  test_generate_bdd.py  test_generate_test_data.py  test_init_workspace.py  test_journal.py  test_learn_from_api.py  test_learn_from_code.py  test_learn_from_docs.py  test_learn_from_specs.py  test_learn_from_tests.py  test_make_install.py  test_next_step.py  test_phase_0_signoff.py  test_phase_1_integration.py  test_phase_1_signoff.py  test_phase_2_integration.py  test_phase_2_signoff.py  test_phase_3_integration.py  test_phase_3_signoff.py  test_phase_4_integration.py  test_phase_4_signoff.py  test_phase_5_integration.py  test_phase_5_signoff.py  test_phase_6_integration.py  test_phase_6_scaffolds.py  test_phase_6_signoff.py  test_placeholder.py  test_plugin_scaffold.py  test_requirements_coverage.py  test_requirements_to_tests.py  test_review_acceptance_criteria.py  test_review_automation.py  test_review_bdd.py  test_review_requirements.py  test_review_user_stories.py  (+11 more)
(+187 files in other folders)
