[project]
name = "test-commander"
version = "0.0.0"
description = "An AI-assisted testing system and quality intelligence center."
authors = [
    {name = "Nick Baynham", email = "nickbaynham@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/NickBaynham/test-commander"
Repository = "https://github.com/NickBaynham/test-commander"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [".venv", "__pypackages__", ".pdm-build", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["scripts", "plugins/test-commander/scripts"]
# fixtures/ holds illustrative consuming-project assets (Markdown, YAML, JSON,
# example Python source and example test files). They are inputs to Test
# Commander helpers, not Test Commander's own tests, so pytest must not
# attempt to collect them.
norecursedirs = ["fixtures"]
